Simple first setup

--- a/README
+++ b/README
@@ -1,4 +1,10 @@
-This is your new Play application
-=================================
+Coffee
+======
+A simple application to track coffee ratings.
 
-This file will be packaged with your application, when using `activator dist`.
+Running
+-------
+Open "activator" (or run "activator ui") to open the interface for compiling and
+starting the application server. When you are done, terminate the activator
+instance via ctrl-c (does not appear to work in cygwin, but works in Windows
+CMD) to perform a graceful shutdown.
